--- a/expenses-app/package.json
+++ b/expenses-app/package.json
@@ -2,6 +2,7 @@
   "name": "expeses-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://stark077-z.github.io/Expenses-Tracker",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -13,6 +14,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
